# education-book-generator

./: README.md  book_outline.md  pyproject.toml  requirements.txt
src/: Introduction_to_Sorting_Algorithms.md  Introduction_to_Sorting_Algorithms_outline.md  Mastering_Data_Structures_and_Algorithms.md  Mastering_Data_Structures_and_Algorithms_outline.md  app.py
src/educational_books/: main.py  types.py
src/educational_books/crews/book_content/: book_content.py
src/educational_books/crews/book_content/config/: agents.yaml  tasks.yaml
src/educational_books/crews/book_outline/: book_outline.py
src/educational_books/crews/book_outline/config/: agents.yaml  tasks.yaml
